--- a/web/index.html
+++ b/web/index.html
@@ -70,8 +70,10 @@
             <p>YouBot will retain memory of your conversations with it,</p>
             <p>but will not share information with other users.</p>
             </p>
-            <p>You can chat with YouBot on SMS, WhatsApp (coming soon), or Discord.</p>
+            <p>You can chat with YouBot on SMS, Discord, or the command line.</p>
             <p>YouBot is in an experimental stage, and free to use.</p>
+            <!-- link to github readme -->
+            <p>To learn more about our plans, see <a href="https://github.com/tombedor/youbot/blob/main/README.md">GitHub</a></p>
         </section>
         <section id="join">
             <h2>Sign up</h2>
