--- a/web/index.html
+++ b/web/index.html
@@ -124,7 +124,7 @@ number -->
                     });
             </script>
             <!-- Opt-out text -->
-            <p id="optOut">You can opt out and request data deletion at any time.</p>
+            <p id="optOut">By continuing, you acknowledge that you may receive updates or notifications via text message at the mobile number provided. You can opt out and request data deletion at any time.</p>
         </section>
     </main>
     <footer>
