phone_number -> phone

--- a/web/index.html
+++ b/web/index.html
@@ -83,7 +83,7 @@ number -->
                 <label for="name">Name:</label><br>
                 <input type="text" id="name" name="name"><br>
                 <label for="phone">Phone:</label><br>
-                <input type="tel" id="phone_number" name="phone_number"><br>
+                <input type="tel" id="phone" name="phone"><br>
                 <label for="discord">Discord username (optional):</label><br>
                 <input type="text" id="discord_username" name="discord_username"><br>
                 <input type='text' name='url' style='display: none;'> <!-- Honeypot field -->
