adjust homepage, add image

--- a/web/index.html
+++ b/web/index.html
@@ -3,14 +3,21 @@
 <html>
 
 <head>
-    <title>Welcome to YouBot</title>
+    <title>YouBot</title>
     <style>
+        img {
+            display: block;
+            margin: auto;
+            width: 400px; /* adjust as necessary */
+            height: auto; /* maintains aspect ratio */
+            margin-top: 25px;
+            margin-bottom: 25px;
+        }
         body {
             background-color: #000000;
             color: #32cd32;
             font-family: 'Courier New', Courier, monospace;
         }
-
         header h1,
         main h2,
         main p,
@@ -60,7 +67,8 @@
 
 <body>
     <header>
-        <h1>Welcome to YouBot</h1>
+        <img src="youbot_logo.png" alt="YouBot Logo" width="200" height="200">
+        <!-- <h1>Welcome to YouBot</h1> -->
     </header>
     <main>
         <section id="about">
@@ -127,9 +135,6 @@ number -->
             <p id="optOut">By continuing, you acknowledge that you may receive updates or notifications via text message at the mobile number provided. You can opt out and request data deletion at any time.</p>
         </section>
     </main>
-    <footer>
-        <p>© 2024 YouBot</p>
-    </footer>
 </body>
 
 </html>
