--- a/web/index.html
+++ b/web/index.html
@@ -74,9 +74,9 @@
         <section id="about">
             <!-- Insert your 1-2 paragraph description here -->
             <p>YouBot is an AI personal assistant.</p>
-            <p>I use it as an interactive journal and tutor, but you can use it for whatever you want!</p>
             <p>YouBot will retain memory of your conversations with it,</p>
-            <p>but will not share information with other users.</p>
+            <p>and build an understanding of you over time.</p>
+            <p>It will not share information with other users.</p>
             </p>
             <p>You can chat with YouBot on SMS, Discord, or the command line.</p>
             <p>YouBot is in an experimental stage, and free to use.</p>
