--- a/web/index.html
+++ b/web/index.html
@@ -93,6 +93,8 @@ number -->
                 <input type="tel" id="phone" name="phone"><br>
                 <label for="discord">Discord username (optional):</label><br>
                 <input type="text" id="discord_username" name="discord_username"><br>
+                <label for="agreeTexts">I agree to receive text messages from YouBot:</label><br>
+                <input type="checkbox" id="agreeTexts" name="agreeTexts" required><br>                
                 <input type='text' name='url' style='display: none;'> <!-- Honeypot field -->
                 <input type="submit" value="Join Now">
             </form>
