integrate with google calendar

--- a/web/index.html
+++ b/web/index.html
@@ -89,11 +89,13 @@ number -->
             <form id="contactForm">
                 <label for="name">Name:</label><br>
                 <input type="text" id="name" name="name"><br>
+                <label for="email">Email:</label><br>
+                <input type="email" id="email" name="email"><br>
                 <label for="phone">Phone:</label><br>
                 <input type="tel" id="phone" name="phone"><br>
                 <label for="discord">Discord username (optional):</label><br>
                 <input type="text" id="discord_username" name="discord_username"><br>
-                <label for="agreeTexts">I agree to receive text messages from YouBot:</label><br>
+                <label for="agreeTexts">I agree to receive text messages and email from YouBot:</label><br>
                 <input type="checkbox" id="agreeTexts" name="agreeTexts" required><br>                
                 <input type='text' name='url' style='display: none;'> <!-- Honeypot field -->
                 <input type="submit" value="Join Now">
