--- a/web/index.html
+++ b/web/index.html
@@ -77,7 +77,7 @@
             <p>YouBot will retain memory of your conversations with it,</p>
             <p>and build an understanding of you over time.</p>
             <p>It will not share information with other users.</p>
-            <p>You can chat with YouBot on SMS, Discord, or the command line.</p>
+            <p>You can chat with YouBot over text, WhatsApp, or the command line.</p>
             <p>YouBot is in an experimental stage, and free to use.</p>
             <!-- link to github readme -->
             <p>To learn more about our plans, see <a href="https://github.com/tombedor/youbot/blob/main/README.md">GitHub</a></p>
@@ -93,8 +93,6 @@ number -->
                 <input type="email" id="email" name="email"><br>
                 <label for="phone">Phone:</label><br>
                 <input type="tel" id="phone" name="phone"><br>
-                <label for="discord">Discord username (optional):</label><br>
-                <input type="text" id="discord_username" name="discord_username"><br>
                 <label for="agreeTexts">I agree to receive text messages and email from YouBot:</label><br>
                 <input type="checkbox" id="agreeTexts" name="agreeTexts" required><br>                
                 <input type='text' name='url' style='display: none;'> <!-- Honeypot field -->
